<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/blanche">

    <!-- Ligne grise -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/grisFonce"/>

    <!-- Titre "Voyages" -->
    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreVoyages"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/marron"/>

    <!-- Image Montagne -->
    <ImageView
        android:id="@+id/imageMontagne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageMontagne"
        android:src="@drawable/montagne500x286"
        android:layout_marginBottom="30dp"/>

    <!-- Image des chaussures -->
    <ImageView
        android:id="@+id/imageLogoAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageChaussures"
        android:src="@drawable/chaussures100x100"
        android:layout_marginBottom="30dp"/>

    <!-- Ligne grise -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/grisFonce"/>

    <!-- bouton de la page suivante -->
    <Button
        android:id="@+id/boutonPrecedent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/marron"
        android:text="@string/suivant"
        android:onClick="pageSuivante"/>

</LinearLayout>
